--- a/sampleapp/src/main/res/layout/native_express_ad_container.xml
+++ b/sampleapp/src/main/res/layout/native_express_ad_container.xml
@@ -23,4 +23,27 @@
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <FrameLayout android:id="@+id/ad_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ad is loading..."
+                android:textColor="@android:color/holo_red_dark"/>
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/margin_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@android:color/holo_red_dark"/>
+
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
