--- a/sampleapp/src/main/res/layout/native_express_ad_container.xml
+++ b/sampleapp/src/main/res/layout/native_express_ad_container.xml
@@ -31,7 +31,7 @@
         <FrameLayout android:id="@+id/ad_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
+            <TextView android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ad is loading..."
