--- a/admobadapter/src/main/res/layout/adlistview_item.xml
+++ b/admobadapter/src/main/res/layout/adlistview_item.xml
@@ -12,9 +12,9 @@
   ~ limitations under the License.
   -->
 
-<com.google.android.gms.ads.formats.NativeContentAdView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                        android:layout_width="match_parent"
-                                                        android:layout_height="wrap_content">
+<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
+                                                           android:layout_width="match_parent"
+                                                           android:layout_height="wrap_content">
 
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:orientation="vertical">
@@ -31,9 +31,15 @@
                           android:layout_marginLeft="5dp">
                 <TextView android:id="@+id/tvDescription" android:layout_width="wrap_content"
                           android:layout_height="wrap_content"/>
-                <TextView android:id="@+id/tvAdvertiser" android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:layout_marginTop="1dp"/>
+                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                                android:layout_marginTop="1dp">
+                    <TextView android:id="@+id/tvStore" android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:layout_alignParentLeft="true"/>
+                    <TextView android:id="@+id/tvPrice" android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:layout_alignParentRight="true"/>
+                </RelativeLayout>
 
             </LinearLayout>
         </LinearLayout>
@@ -47,4 +53,5 @@
                 android:layout_marginTop="2dp"
                 android:id="@+id/btnAction"/>
     </LinearLayout>
-</com.google.android.gms.ads.formats.NativeContentAdView>
+
+</com.google.android.gms.ads.nativead.NativeAdView>
