--- a/sampleapp/src/main/res/layout/activity_main_recycleview.xml
+++ b/sampleapp/src/main/res/layout/activity_main_recycleview.xml
@@ -1,10 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context="${relativePackage}.${activityClass}">
+                android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMessages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
