--- a/sampleapp/src/main/res/layout/native_express_ad_container.xml
+++ b/sampleapp/src/main/res/layout/native_express_ad_container.xml
@@ -14,7 +14,7 @@
   -->
 
 <!--got from https://github.com/googleads/googleads-mobile-android-examples-->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ad_card_view"
     android:layout_width="match_parent"
@@ -46,4 +46,4 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
