--- a/admobadapter/src/main/res/layout/web_ad_container.xml
+++ b/admobadapter/src/main/res/layout/web_ad_container.xml
@@ -14,7 +14,7 @@
   -->
 
 <!--got from https://github.com/googleads/googleads-mobile-android-examples-->
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ad_card_view"
     android:layout_width="match_parent"
@@ -23,4 +23,4 @@
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp">
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
